# bilibili-ticket

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
configs/: tasks.yaml.example
docs/superpowers/plans/: 2026-04-16-bhyg-scheduler.md
src/bilibili_ticket/: app.py  config.py  daemon.py  errors.py  models.py  runtime.py  status.py
src/bilibili_ticket/bilibili/: client.py  login.py  order_service.py  request.py
src/bilibili_ticket/notifier/: wecom.py
src/bilibili_ticket/scheduler/: manager.py  priority.py  show_runner.py
tests/: test_app_smoke.py  test_config.py  test_daemon.py  test_priority.py  test_runtime.py  test_status.py
tests/bilibili/: test_login.py  test_order_service.py  test_request_session.py
tests/notifier/: test_wecom.py
tests/scheduler/: test_manager.py  test_show_runner.py
