[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-ticket"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]",
    "PyYAML",
    "qrcode[pil]",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
